--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "commander": "^2.11.0",
     "download-git-repo": "^1.0.1",
     "inquirer": "^3.2.0",
-    "ora": "^1.3.0"
+    "ora": "^1.3.0",
+    "rimraf": "^2.6.1"
   },
   "bin": {
     "reacter": "bin/reacter",
