--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "chalk": "^2.0.1",
     "commander": "^2.11.0",
     "download-git-repo": "^1.0.1",
+    "handlebars": "^4.0.10",
     "inquirer": "^3.2.0",
+    "metalsmith": "^2.3.0",
+    "minimatch": "^3.0.4",
     "ora": "^1.3.0",
-    "rimraf": "^2.6.1"
+    "read-metadata": "^1.0.0",
+    "rimraf": "^2.6.1",
+    "validate-npm-package-name": "^3.0.0"
   },
   "bin": {
     "reacter": "bin/reacter",
