--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "homepage": "https://github.com/Martin0809/reacter#readme",
   "dependencies": {
+    "async": "^2.5.0",
     "chalk": "^2.0.1",
     "commander": "^2.11.0",
+    "consolidate": "^0.14.5",
     "download-git-repo": "^1.0.1",
     "handlebars": "^4.0.10",
     "inquirer": "^3.2.0",
     "metalsmith": "^2.3.0",
     "minimatch": "^3.0.4",
+    "multimatch": "^2.1.0",
     "ora": "^1.3.0",
     "read-metadata": "^1.0.0",
     "rimraf": "^2.6.1",
