--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reacter-cli",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Simple CLI for React projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
